# desmonds-working-progress-video-games-from-meta-ray-bans

./: .git-credentials  .gitignore  .lfj-aae-config.json  00-BRIEFING.md  00-Working-Memory.md  Gentech-HQ.md  Home.md  INDEX.md  Location.md  README.md  VAULT-CONDENSING-PLAN.md  _config.yml  defi-data.json  gentech-avax-metadata.json  gentechlabs-index.html  hub-christel.html  hub-vanito.html  hub.html  index-backup.html  index.html  journal.md  package-lock.json  package.json  projects.json  secrets.env  sync-projects.py  tsconfig.json  wrangler.toml  x402-implementation-guide.md
10-Archive/Memory-Backups/2026-05-07-12/yoyo-skill-finance/nethermind-defi-skills/: .gitignore  .pre-commit-config.yaml  pyproject.toml
10-Archive/Memory-Backups/2026-05-07-12/yoyo-skill-finance/nethermind-defi-skills/.claude/skills/intent-to-transaction/: SKILL.md
10-Archive/Memory-Backups/2026-05-07-12/yoyo-skill-finance/nethermind-defi-skills/examples/defi-agent/: index.html
10-Archive/Memory-Backups/2026-05-07-12/yoyo-skill-finance/nethermind-defi-skills/scripts/: format_playbooks.py
10-Archive/Memory-Backups/2026-05-07-12/yoyo-skill-finance/nethermind-defi-skills/src/defi_skills/: __init__.py
10-Archive/Memory-Backups/2026-05-07-12/yoyo-skill-finance/nethermind-defi-skills/src/defi_skills/cli/: __main__.py
Archive/02-Labs/hermes-kanban/: pyproject.toml
Archive/02-Labs/hermes-kanban/cli/hermes_kanban_sqlite/: __init__.py  cli.py  kanban.py
Archive/02-Labs/hermes-kanban/docs/: API.md  DEVELOPMENT.md  sprint-1.5.0.md  sprint-1.6.md  sprint-1.7.md  sprint-1.8.md
Archive/02-Labs/hermes-kanban/plugin/: main.js  manifest.json  versions.json
Archive/02-Labs/hermes-kanban/plugin/src/: server.ts
Archive/02-Labs/hermes-kanban/scripts/: release.sh
Archive/02-Labs/hermes-kanban/skills/: kanban-rituals.md  project-breakdown-to-kanban.md
Archive/02-Labs/hermes-kanban/tests/: __init__.py  test_cli.py  test_database.py
(+3644 files in other folders)
